# twostream

./: .gitignore  CMakeLists.txt  README.md  check_equality.py  compile.sh  main_py.py
.github/workflows/: test.yaml
cpp/: main.cpp  twostream.cpp
fortran/: main.f90  twostream.f90
python/: twostream.py
results/: amean_cpp.txt  amean_fortran.txt  amean_py.txt
src/: CMakeLists.txt  twostream.f90
test/: CMakeLists.txt  benchmark_twostream.f90  test_twostream.f90  test_twostream_reproduce.f90  test_utils.f90  twostream_test_utils.f90
